# bitcoin-kangaroo-solver

./: .gitignore  AGENTS.md  Cargo.toml  PLAN.md  README.md  README_tr.md  bitcoin_puzzle_71-160_hedefler.txt  build.rs  naga-0.20.0-patch.md
kernels/: bisect_main_only.wgsl  kangaroo.cu  kangaroo.wgsl
src/: lib.rs  main.rs
src/checkpoint/: mod.rs
src/kangaroo/: collision.rs  distinguished.rs  mod.rs  params.rs  point.rs  walk.rs
src/notification/: mod.rs
src/puzzle/: mod.rs
src/solver/: mod.rs
src/solver/cpu/: mod.rs
src/solver/gpu/: mod.rs
src/solver/wgpu_solver/: mod.rs
tests/: integration_test.rs
